# isaac

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
cmake/: IsaacConfig.cmake.in
demo/: CMakeLists.txt  main.cpp
demo/src/: hud.cpp  hud.hpp  main.cpp  obstacle.cpp  obstacle.hpp  obstacles.cpp  obstacles.hpp  orbiter.cpp  orbiter.hpp  particle.hpp  player.hpp  spawner.cpp  spawner.hpp  walls.cpp  walls.hpp
include/isaac/: game.hpp  game_object.hpp  isaac.hpp
include/isaac/components/: collider_2d.hpp  collision_body_2d.hpp  collision_object_2d.hpp  component.hpp  game_object.hpp  rigidbody_2d.hpp  shape_renderer.hpp  sprite_renderer.hpp
include/isaac/internal/: base_object.hpp
include/isaac/objects/ui/: canvas.hpp
include/isaac/physics/: collision_2d.hpp  collision_shape_2d.hpp  geometry_2d.hpp  math.hpp  matrix.hpp  physics_2d.hpp  quad_tree.hpp  transform.hpp  utility.hpp  vector.hpp
include/isaac/render/: window_server.hpp
include/isaac/scene/: scene.hpp  scene_manager.hpp
include/isaac/system/: cyclic_iterator.hpp  defaults.hpp  input.hpp  logger.hpp  observer.hpp  random.hpp  service_locator.hpp  templates.hpp  thread.hpp  world.hpp
ports/: 0001-fix_find_package.patch  portfile.cmake  usage  vcpkg.json
src/: defaults.cpp  game.cpp  isaac.cpp
src/components/: collider_2d.cpp  collision_body_2d.cpp  collision_object_2d.cpp  component.cpp  game_object.cpp  rigidbody_2d.cpp  shape_renderer.cpp  sprite_renderer.cpp
src/internal/: base_object.cpp
src/objects/ui/: canvas.cpp
src/physics/: collision_2d.cpp  collision_shape_2d.cpp  geometry_2d.cpp  math.cpp  matrix.cpp  physics_2d.cpp  transform.cpp  utility.cpp  vector.cpp
src/render/: window_server.cpp
src/scene/: scene.cpp  scene_manager.cpp
src/system/: cyclic_iterator.cpp  defaults.cpp  input.cpp  logger.cpp  observer.cpp  random.cpp  service_locator.cpp  thread.cpp  world.cpp
tests/: CMakeLists.txt  benchmark.cpp  doctest.h  example.t.cpp  physics.t.cpp
